--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.8",
     "react-scroll-motion": "^0.3.2",
     "react-toastify": "^9.1.1",
     "styled-components": "^5.3.6",
