--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "react-carousel": "^4.3.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-loader-spinner": "^5.3.4",
     "react-parallax": "^3.5.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.8",
     "react-scroll-motion": "^0.3.2",
+    "react-spinners": "^0.13.7",
     "react-toastify": "^9.1.1",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
